--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	  <script type="text/javascript" charset="utf-8" src="main.js"></script>
 
   </head>
-  <body onload="window.location.href='autotest/pages/all.html" id="stage" class="theme">
+  <body onload="window.location.href='autotest/pages/all.html';" id="stage" class="theme">
     <h1>Apache Cordova Tests</h1>
     <div id="info">
         <h4>Platform: <span id="platform">  </span></h4>
